Bug Fix: removed extra margin-top from invitations conversation

--- a/app/assets/stylesheets/desktop/invitations.css.scss
+++ b/app/assets/stylesheets/desktop/invitations.css.scss
@@ -9,7 +9,6 @@
 {
 	float: right;
 	margin-right: 24px;
-	margin-top: 10px;
 	width: 52%
 }
 
